Fixed some spacing issues with checkbox

--- a/src/components/CreateNewGame/CreateGame.css
+++ b/src/components/CreateNewGame/CreateGame.css
@@ -1,8 +1,15 @@
-.create-game {
-    
+.game-form {
+    display: flex;
+    flex-direction: column;
 }
 
 #check {
-    margin: 0;
-    border: 0;
+    margin-right: -130px;
+    margin-left: -100px;
+    padding: 0;
 }
+
+#gameName {
+    display: inline;
+}
+
